# PokeMMO-Companion

./: .gitignore  Cargo.toml  Info.md  LICENSE  README.md  RustInfo.md
.github/workflows/: CI_and_Release.yml  rust.yml
companion-app/: Cargo.toml  build.rs
companion-app/assets/data/: items.json  locations.json  skills.json
companion-app/assets/locales/: locale_definition.json
companion-app/assets/locales/DE/: locations_pokedex.json
companion-app/assets/locales/EN/: item_descriptions.json  locations.json  locations_pokedex.json  skills.json
companion-app/assets/locales/ES/: item_names.json  miscellaneous.json
companion-app/assets/locales/FR/: skills.json
companion-app/assets/locales/IT/: item_descriptions.json  locations.json  locations_pokedex.json  skills.json
companion-app/assets/resources/: EV Berries.md  EV Hordes Overview.md  EV Hordes.md  Ho-Oh-Guide.md  Ho-Oh-Team.md  Level-Caps.md  NatureInfo.md  ROOT.md  Roaming-Legendaries-Calendar.md
companion-app/src/: app.rs  gui.rs  main.rs  style.rs  utils.rs
companion-app/src/backend/: async_manager.rs  feature_state.rs  locales.rs  mod.rs  notes_feature.rs  ressources_feature.rs  search_index.rs  settings.rs  storage.rs  type_matrix_feature.rs
companion-app/src/backend/language_helper/: language_helper_feature.rs  locale_data_bridge.rs  mod.rs
companion-app/src/backend/search/: data_bridge.rs  mod.rs  search_index.rs  search_update.rs
companion-app/src/frontend/: gen_icon_includes.rs  gui_subsystem.rs  mod.rs  style.rs  utils.rs  viewport.rs
companion-app/src/frontend/gui/: breeding_calculator.rs  language_helper.rs  main_gui.rs  mod.rs  notes.rs  resources.rs  settings.rs  type_matrix.rs
data-builder/: Cargo.toml  README.md  build_all_locales.sh
data-builder/data/: copy_data_to_companion_app.sh
data-builder/data/locales/DE/: item_descriptions.json  item_names.json  locations.json  miscellaneous.json  monsters.json  skills.json
data-builder/data/locales/EN/: item_names.json  miscellaneous.json  monsters.json
data-builder/data/locales/ES/: item_descriptions.json  locations.json  locations_pokedex.json  skills.json
data-builder/data/locales/FR/: item_descriptions.json  item_names.json  locations.json  locations_pokedex.json  miscellaneous.json  monsters.json
data-builder/data/locales/IT/: item_names.json  miscellaneous.json
data-builder/data/source/: README.md
data-builder/data/source/DE/: additional_translations.json  dump_strings.xml  items.json  skills.json
data-builder/data/source/EN/: additional_translations.json  dump_strings.xml
data-builder/data/source/ES/: additional_translations.json  dump_strings.xml  items.json  skills.json
data-builder/data/source/FR/: additional_translations.json  dump_strings.xml  items.json  skills.json
data-builder/data/source/IT/: additional_translations.json  dump_strings.xml  items.json  skills.json
data-builder/src/: generic_entry.rs  items.rs  locations.rs  main.rs  miscellaneous.rs  utils.rs
hotkey-daemon/: Cargo.toml
hotkey-daemon/src/: main.rs  main_unix.rs  main_win.rs
src/: app.rs  color_palette.rs  feature_state.rs  gui.rs  main.rs  style.rs  utils.rs
src/backend/: feature_x.rs  mod.rs  notes_feature.rs  ressources_feature.rs  storage.rs
src/frontend/: viewport.rs
swarm-callout-api/: Cargo.toml  README.md
swarm-callout-api/src/: data_source.rs  data_target.rs  main.rs
swarm-callout-api/src/data_source/: discord_bot.rs
