[package]
name = "PokeMMO-Companion"
version = "0.1.0"
edition = "2024"


[dependencies]
# ——— GUI: egui + eframe (uses winit/glow internally) ——————————————————————————
eframe = "0.31"                                                           # egui app framework (with native runtimes & boilerplate already done in app trait)
egui = "0.31"                                                             # core immediate‐mode GUI library
egui_extras = { version = "0.31", features = ["default", "all_loaders"] }
# for images in markdown & egui elements:
image = { version = "0.25", features = ["png", "jpeg"] }
egui_commonmark = "0.20"
pulldown-cmark = "0.13.0"

regex = "1.11.1"

# eframe dependencies, i think
winapi = { version = "0.3", features = ["winuser"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_System_Com",
] }

# ——— Raw window handles (also used by eframe internally) ————————————————————————
raw-window-handle = "0.6" # gives me HWND/WlSurface/Window under the hood, when I need functionality that exceeds eframe

# ——— X11 support ————————————————————————————————————————————————
x11 = "2.18.2" # Exposes Xlib and XFixes bindings for ARGB visuals, shape/input regions, key grabs

# ——— Wayland support (optional) ——————————————————————————————————————
# layer‑shell protocol via Smithay toolkit (only compiled with the `wayland` feature)
smithay-client-toolkit = { version = "0.19.2", optional = true }

strum = "0.27"        # for the IntoEnumIterator trait
strum_macros = "0.27" # for #[derive(EnumIter)]

# windows specific dependencies
[target.'cfg(windows)'.dependencies]
# ——— Windows APIs via windows‐rs ————————————————————————————————————————
windows = { version = "0.61", features = [
  "Win32_Foundation",             # HWND, BOOL, etc.
  "Win32_UI_WindowsAndMessaging", # CreateWindowExW, RegisterHotKey, GetMessageW…
  "Win32_System_LibraryLoader",   # GetModuleHandle, if needed
] }


[features]
wayland = ["smithay-client-toolkit"]
