[package]
name = "data-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }          # cli args parser
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
indexmap = { version = "2", features = ["serde"] }
regex = "1"
